objects/PortalAlert__c.object
<CustomObject>
    <fields>
        <fullName>FromDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACM</fullName>
                </value>
                <value>
                    <fullName>ACR</fullName>
                </value>
                <value>
                    <fullName>ACS Magazines</fullName>
                </value>
                <value>
                    <fullName>ACTIVE.com</fullName>
                </value>
                <value>
                    <fullName>ACTIVE.com Mobile App</fullName>
                </value>
                <value>
                    <fullName>Active Advantage</fullName>
                </value>
                <value>
                    <fullName>Active Giving</fullName>
                </value>
                <value>
                    <fullName>Active Global</fullName>
                </value>
                <value>
                    <fullName>ACTIVE Net</fullName>
                </value>
                <value>
                    <fullName>Active Trainer</fullName>
                </value>
                <value>
                    <fullName>ActiveWorks-Camps</fullName>
                </value>
                <value>
                    <fullName>ActiveWorks-Endurance</fullName>
                </value>
                <value>
                    <fullName>AWO_NRRS</fullName>
                </value>
                <value>
                    <fullName>AWO Campgrounds</fullName>
                </value>
                <value>
                    <fullName>AWO Hunt and Fish</fullName>
                </value>
                <value>
                    <fullName>Blue Bear</fullName>
                </value>
                <value>
                    <fullName>Business Manager</fullName>
                </value>
                <value>
                    <fullName>Campgrounds - TX</fullName>
                </value>
                <value>
                    <fullName>Class</fullName>
                </value>
                <value>
                    <fullName>Class-to-ACTIVE Net Migration</fullName>
                </value>
                <value>
                    <fullName>Fairway</fullName>
                </value>
                <value>
                    <fullName>FellowshipOne</fullName>
                </value>
                <value>
                    <fullName>Gen</fullName>
                </value>
                <value>
                    <fullName>HF Arkansas</fullName>
                </value>
                <value>
                    <fullName>HF California</fullName>
                </value>
                <value>
                    <fullName>HF Colorado</fullName>
                </value>
                <value>
                    <fullName>HF Connecticut</fullName>
                </value>
                <value>
                    <fullName>HF Idaho</fullName>
                </value>
                <value>
                    <fullName>HF Illinois</fullName>
                </value>
                <value>
                    <fullName>HF Iowa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <label>Portal Alert</label>
    <nameField>
        <label>Portal Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>ACM</fullName>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>ACM</value>
        </filters>
        <label>ACM</label>
    </listViews>
    <listViews>
        <fullName>ACR</fullName>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>ACR</value>
        </filters>
        <label>ACR</label>
    </listViews>
    <listViews>
        <fullName>ActiveNet</fullName>
        <columns>NAME</columns>
        <columns>ProductFamily__c</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>ACTIVE Net</value>
        </filters>
        <label>ACTIVE Net</label>
    </listViews>
    <listViews>
        <fullName>Active_Giving</fullName>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Active Giving</value>
        </filters>
        <label>Active Giving</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductFamily__c</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Portal_Alerts</fullName>
        <columns>NAME</columns>
        <columns>ProductFamily__c</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ToDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All Active Portal Alerts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Blue_Bear</fullName>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Blue Bear</value>
        </filters>
        <label>Blue Bear</label>
    </listViews>
    <listViews>
        <fullName>Class</fullName>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Class</value>
        </filters>
        <label>Class</label>
    </listViews>
    <listViews>
        <fullName>Fairway</fullName>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Fairway</value>
        </filters>
        <label>Fairway</label>
    </listViews>
    <listViews>
        <fullName>FellowshipOne</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>FellowshipOne</value>
        </filters>
        <label>FellowshipOne</label>
    </listViews>
    <listViews>
        <fullName>GEN</fullName>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Gen</value>
        </filters>
        <label>GEN</label>
    </listViews>
    <listViews>
        <fullName>RTP</fullName>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>RTP</value>
        </filters>
        <label>RTP</label>
    </listViews>
    <listViews>
        <fullName>Thriva</fullName>
        <columns>NAME</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Thriva</value>
        </filters>
        <label>Thriva</label>
    </listViews>
</CustomObject>